--- a/app.yaml
+++ b/app.yaml
@@ -2,8 +2,10 @@ runtime: custom
 env: flex
 
 readiness_check:
-  app_start_timeout_sec: 1
-
+  app_start_timeout_sec: 20
+  
 resources:
+  cpu: 1
+  memory_gb: 2
   disk_size_gb: 12
 
